# ShfaAI

./: .gitignore  PRD.md  README.md  deploy.sh  init.sh  main.py  pyproject.toml
backend/: agent.py  cli_chat.py  config.py  eval_runner.py  knowledge_base.py  llm_client.py  main.py  models.py  requirements.txt  security_logger.py  tools.py
backend/sanitization/: __init__.py  layer1_normalize.py  layer2_heuristic.py  layer3_classifier.py  layer4_llm_judge.py  layer5_datamarking.py  layer6_tool_judge.py
evals/: eval_results.json  eval_results_L3.json  eval_results_gemini.json  eval_results_gemini_defense_on.json  eval_results_ministral8b.json  gemini-3-flash.json  ministral-3b.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/.interface-design/: system.md
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: ChatTab.tsx  EvalPanel.tsx  KnowledgeBaseTab.tsx  PipelineTrace.tsx  PromptVisualizer.tsx  SettingsSidebar.tsx
frontend/src/components/evals/: AblationMatrix.tsx  CrossModelComparison.tsx  EvalsTab.tsx  FprFix.tsx  LayerCombinations.tsx  LayerOverview.tsx  ProblemIntro.tsx  Recommendations.tsx  eval-data.ts
tests/: test_agent.py  test_eval.py  test_knowledge_base.py  test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_layer5.py  test_layer6.py  test_llm_client.py  test_models.py  test_pipeline.py  test_tools.py
