[project]
name = "laur"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "onnxruntime>=1.24.3",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "transformers>=4.57.6",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]
